version 20080630_1
Added the page name to the page titles.  Easier to see which page is
which when you have multiple tabs open in your browser, or when reviewing
your browser history.

version 20080619_2
Changes to the selenium test file:
Starting up and shutting down the browser after ~20 tests appears to
speed the tests up overall.  There is some speculation about why at
http://citechnology.blogspot.com/2007/11/improving-selenium-performance-in-ie6.html
All I know is that for my (Gordon's) setup the tests would get *very*
slow as time went on, and they //appear// to be faster when I shut down
and start up the browser over and over after only a small number of
tests have occurred.

version 20080619_1
Luke Closs pointed me to universaleditbutton.org, which is a compelling idea.
Added application/wiki links in the <head>, but then realized that I'd never
gotten around to adding application/rss+xml links to <head>, so did that too.
Also decided to update my in-code tags to my standard [tag:some_tag:gem]
format.
Also added the is_last_test option to each test, to be able to short
circuit the tests if you really only need to run a section of them.

version 20080618_1
Updated the path to the Selenium Remote Control server so that it
would run the version that controls Firefox 3.  Firefox 3 passes
all tests.

version 20080617_1
Changed the Selenium test file again.  Now uses an array of hash
references for the tests.

version 20080613_1
Updated the Selenium test file to use a new format.  Each "story" is
now in a seperate subroutine with a few definitions added as a smart
comment of sorts.  So, for example, you can solo tests, or mark that
tests shouldn't be run.  This is all done directly at the location of
the story, so there's no need to fill out a seperate hash at the top
of the test.
This new approach is really nice because you can simply add the code
for a new test, turn solo => 1, and it will just run that one test.