@@ -1,3 +1,11 @@
+version 20080703_1
+Added the ability to use colons to allow for some of the simpler page
+actions.  For example, http://www.pageoftext.com/test_page:edit will
+take you to an editing page now.  If you are not using mod_rewrite, then
+that URL would look like this http://www.yourwikisite.com/?test_page:edit
+with the question mark.  If you are using mod_rewrite then you should note
+the addition of the \\: in the Apache configuration RewriteRule.
+
 version 20080630_1
 Added the page name to the page titles.  Easier to see which page is
 which when you have multiple tabs open in your browser, or when reviewing
